cluster-config/dev/find/gateway/gateway.yaml
---
---

# Source: gateway/templates/traefik-service.yml
# Defines a load balancer that will expose the Traefik
# ingress controller externally to accept requests.
 
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: default
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: ${CLUSTER_NAME}-rg
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: http
    - protocol: TCP
      port: 443
      name: https
  type: LoadBalancer
  loadBalancerIP: ${CLUSTER_PUBLIC_IP}
---

# Source: gateway/templates/traefik-service.yml
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service-internal
  namespace: default
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
---

# Source: gateway/templates/traefik-service.yml
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service-internal-elasticsearch
  namespace: default
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9200
      name: http
---

# Source: gateway/templates/traefik-ingress.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: default
  labels:
    k8s-app: traefik-ingress-lb
    
spec:
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: episerver.azurecr.io/episerver/find-services-gateway:0.2-develop-50113 # Gateway image version
        name: traefik-ingress
        resources:
          limits:
            cpu: "1000m"
            memory: "4Gi"
          requests:
            cpu: "750m"
            memory: "3Gi"
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: https
          containerPort: 443
          hostPort: 443
        - name: internal-http
          containerPort: 8000
          hostPort: 8000
        - name: internal-es
          containerPort: 9200
          hostPort: 9200
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
        - --metrics.datadog=true
        - --metrics.datadog.address=datadog-agent:8125
        - --metrics.datadog.addrouterslabels=true
        - --metrics.datadog.pushInterval=15s
        # - --tracing.datadog=true
        # - --tracing.datadog.localAgentHostPort=datadog-agent:8126
        # - --tracing.datadog.debug=true
        - --log.level=INFO
        - --log.filePath="/var/log/turnstile-gateway.log"
        - --log.format=json
        - --accesslog=true
        - --entrypoints.http.Address=:80
        - --entrypoints.http.http.redirections.entryPoint.to=:443
        - --entrypoints.https.Address=:443
        - --entrypoints.https.Turnstile.turnstileEndpoint=$(KV_TURNSTILE_ENDPOINT)
        - --entrypoints.https.Turnstile.appKey=$(KV_TURNSTILE_KEY)
        - --entrypoints.https.Turnstile.appSecret=$(KV_TURNSTILE_SECRET)
        - --entrypoints.https.Turnstile.allowedAuthenticationModes=epi-single epi-hmac
        - --entrypoints.https.Turnstile.allowRingHeader=true
        - --entrypoints.https.Turnstile.allowUpstreamAuthorization=true
        - --entrypoints.internal-http.Address=:8000
        - --entrypoints.internal-es.Address=:9200
        - --providers.kubernetescrd
        - --experimental.localplugins.contentgraphsearch.modulename=github.com/optimizely/contentgraphsearch
      imagePullSecrets:
      - name: acr-auth
---

# Source: gateway/templates/search-v2.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route-search-v2
  namespace: default
spec:
  entryPoints:
    - https
  tls:
    store: 
      name: default
  routes:
    - match: 'Path(`/_search/v2`) || Path(`/_search/v2/scroll`) && Method(`POST`) && Headers(`X-Cluster-Secret`, `73c40afe533a0e07dc55f668aecad113a498f385115c247b356b1c0a1e0f04b5`)'
      kind: Rule
      middlewares:
        - name: strip-searchv2-prefix
        - name: content-graph-search
      services:
        - name: opensearch-http-service
          port: 9200
---

# Source: gateway/templates/search-v2.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: content-graph-search
  namespace: default
spec:
  plugin:
    contentgraphsearch:
      opensearchendpoint: "http://opensearch-http-service:9200"
      compressionlevel: -1
      minresponsebody: 1024

# Compression level values: https://pkg.go.dev/compress/flate#pkg-constants
# This parameter is only applicable to nested queries.
# For simple queries that go straight to Opensearch, Opensearch will handle compression.
#   NoCompression      = 0
#   BestSpeed          = 1
#   BestCompression    = 9
#   DefaultCompression = -1
#   HuffmanOnly = -2

# minresponsebody is the minimum response body size in bytes, if the response is larger than this value, the response will be compressed
# only applicable to nested queries
---

# Source: gateway/templates/search-v2.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-searchv2-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /_search/v2
---

# Source: gateway/templates/traefik-ratelimiter-middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: rate-limiter
  namespace: default
spec:
  turnstileRateLimiter:
    providerType: Redis
    connectionOptions: addr=${REDIS_HOST_NAME}:6379,db=0,password=${REDIS_ACCESS_KEY}
    limits:
    - period: 1
      rate: 200
      rateClaim: QPS
